# pcr_qt

./: .gitignore  CMakeLists.txt  main_window.cpp  main_window.h
cmake/: info.cmake  lint-target.cmake  lint.cmake  spell-target.cmake  spell.cmake
